add opens for Java 9+ codE